device info plugin hinzugefügt und läuft

--- a/Meal Reviewer/www/main.html
+++ b/Meal Reviewer/www/main.html
@@ -126,7 +126,8 @@
             </form>
             <a class="ui-btn" id="btnShowShakeTest" href="#shakeHome" data-transition="slide">Shake Test</a>
             <a class="ui-btn" id="btnShowMediaTest" href="#mediaHome" data-transition="slide">Media/Sound Test </a>
-            <a class="ui-btn" id="btnVibrateTest" data-transition="slide">Vibrate Test </a>
+            <button class="ui-btn ui-btn-icon-left" id="btnVibrateTest">Test Vibration</button>
+            <button class="ui-btn ui-btn-icon-left" id="btnDeviceInfo">Device Info</button>
         </div>
     </div>
 
