--- a/Meal Reviewer/www/main.html
+++ b/Meal Reviewer/www/main.html
@@ -3,9 +3,7 @@
 <head>
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
     <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no' />
-
     <title>MealReviewerFinal</title>
-
     <!-- MealReviewerFinal-Verweise -->
     <link href="css/index.css" rel="stylesheet">
     <link href="css/jquery.mobile-1.4.5.min.css" rel="stylesheet">
@@ -13,7 +11,6 @@
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="lib/jquery.min.js"></script>
     <script src="lib/jquery.mobile-1.4.5.min.js"></script>
-
 </head>
 <body>
     <!-- Meal Reviewer Home View -->
@@ -28,7 +25,6 @@
         <div data-role="header">
             <h1>Meal Reviewer</h1>
         </div>
-
         <div data-role="content">
             <form>
                 <input id="restaurantfilter" data-type="search" placeholder="Search for a restaurant...">
@@ -38,14 +34,12 @@
             </ul>
         </div>
     </div>
-
     <!-- Restaurant View -->
     <div data-role="page" id="restaurant" data-theme="a">
         <div data-role="header">
             <a href='#mealHome' class='ui-btn-left' data-transition='slide' data-direction='reverse'>Back</a>
             <h1>Restaurant Details</h1>
         </div>
-
         <div data-role="content">
             <div>
                 <ul data-role="listview" id="restaurant-data">
@@ -71,7 +65,6 @@
             </ul>
         </div>
     </div>
-
     <!-- Meal view-->
     <div data-role="page" id="meal" data-theme="a">
         <div data-role="header">
@@ -84,7 +77,6 @@
             </ul>
         </div>
     </div>
-
     <!-- Google Maps View-->
     <div data-role="page" id="map-page" data-url="map-page">
         <div data-role="header">
@@ -96,7 +88,6 @@
             <!-- map loads here... -->
         </div>
     </div>
-
     <!-- More Stuff Home View-->
     <div data-role="page" id="stuffHome" data-theme="a">
         <div data-role="navbar" data-iconpos="left">
@@ -126,11 +117,11 @@
             </form>
             <a class="ui-btn" id="btnShowShakeTest" href="#shakeHome" data-transition="slide">Shake Test</a>
             <a class="ui-btn" id="btnShowMediaTest" href="#mediaHome" data-transition="slide">Media/Sound Test </a>
+            <a class="ui-btn" id="btwnShowCompassTest" href="#compassHome" data-transition="slide">Orientation/Compass Test </a>
             <button class="ui-btn ui-btn-icon-left" id="btnVibrateTest">Test Vibration</button>
             <button class="ui-btn ui-btn-icon-left" id="btnDeviceInfo">Device Info</button>
         </div>
     </div>
-
     <!-- Shake Test Page-->
     <div data-role="page" id="shakeHome" data-theme="a">
         <div data-role="header">
@@ -141,7 +132,6 @@
             <center><h4>Shake the device!</h4></center>
         </div>
     </div>
-
     <!-- Media Test Page-->
     <div data-role="page" id="mediaHome" data-theme="a">
         <div data-role="header">
@@ -153,11 +143,20 @@
         </div>
     </div>
 
+    <!-- Compass Page-->
+    <div data-role="page" id="compassHome" data-theme="a">
+        <div data-role="header">
+            <a href='#stuffHome' id="backFromCompass" class='ui-btn-left' data-transition='slide' data-direction='reverse'>Back</a>
+            <h1>Compass Tester</h1>
+        </div>
+        <div data-role="content">
+            <center><h4 id="heading"></h4></center>
+        </div>
+    </div>
 
     <!-- Cordova-Verweis, wird Ihrer App beim Erstellen hinzugefügt. -->
     <script src="cordova.js"></script>
     <script src="scripts/platformOverrides.js"></script>
-
     <script src="scripts/index.js"></script>
 </body>
 </html>
