--- a/Meal Reviewer/www/index.html
+++ b/Meal Reviewer/www/index.html
@@ -4,7 +4,6 @@
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
     <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no' />
     <title>Cordova Prototype</title>
-    <!-- MealReviewerFinal-Verweise -->
     <link href="css/index.css" rel="stylesheet">
     <link href="css/jquery.mobile-1.4.5.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
@@ -142,12 +141,11 @@
             <h1>Media Test</h1>
         </div>
         <div data-role="content">
-            <label>Pressing the <b>Record Audio</b> Button will start the native Audio Recorder of the device. After a sucuessfull record, close the Audio Recorder. To play the record file, press the <b>Play recent Audio</b> Button.</label>
+            <label>Pressing the <b>Record Audio</b> Button will start the native Audio Recorder of the device. After a succuessful record, close the Audio Recorder. To play the record file, press the <b>Play recent Audio</b> Button.</label>
             <button class="ui-btn ui-btn-icon-left" id="startRecord">Record Audio</button>
             <button class="ui-btn ui-btn-icon-left" id="playAudio">Play recent Audio</button>
         </div>
     </div>
-
     <!-- Compass Page-->
     <div data-role="page" id="compassHome" data-theme="a">
         <div data-role="header">
@@ -158,7 +156,6 @@
             <center><h4 id="heading"></h4></center>
         </div>
     </div>
-
     <!-- Contacts Page-->
     <div data-role="page" id="contactsHome" data-theme="a">
         <div data-role="header">
