--- a/Meal Reviewer/www/index.html
+++ b/Meal Reviewer/www/index.html
@@ -170,7 +170,8 @@
         </div>
     </div>
     <!-- Cordova-Verweis, wird Ihrer App beim Erstellen hinzugefügt. -->
-    <script src="cordova.js"></script>
+    <!-- auskommentiert für PhoneGap Build
+        <script src="cordova.js"></script>-->
     <script src="scripts/platformOverrides.js"></script>
     <script src="scripts/index.js"></script>
 </body>
