--- a/Meal Reviewer/www/index.html
+++ b/Meal Reviewer/www/index.html
@@ -169,9 +169,8 @@
             <ul data-role="listview" id="contact-data" data-inset="true" data-filter="true" data-input="#contactfilter"></ul>
         </div>
     </div>
-    <!-- Cordova-Verweis, wird Ihrer App beim Erstellen hinzugefügt. -->
-    <!-- auskommentiert für PhoneGap Build
-        <script src="cordova.js"></script>-->
+
+    <script src="cordova.js"></script>
     <script src="scripts/platformOverrides.js"></script>
     <script src="scripts/index.js"></script>
 </body>
